--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">SpotifyCloneMVVM</string>
     <string name="notification_channel_name">Music Channel</string>
     <string name="notification_channel_description">Shows the currently playing music</string>
+    <string name="playlist_title">Playlist Title</string>
+    <string name="_100_songs">100 Songs</string>
 
 </resources>
